[gd_scene load_steps=10 format=3 uid="uid://drmmjx5y1axeb"]

[ext_resource type="Script" uid="uid://dwsr0ckp52kxr" path="res://scenes/player_info/avatar_hub.gd" id="1_oey15"]
[ext_resource type="Texture2D" uid="uid://f77qg8t6qqf8" path="res://assets/ui/player_info/ui_backpack_hungue_hub.png" id="1_y7i3r"]
[ext_resource type="Texture2D" uid="uid://c8wlfsf1j2mgb" path="res://assets/ui/player_ui/ui_top_arrow——background.png" id="2_20omo"]
[ext_resource type="Texture2D" uid="uid://c4wtfikkkjydq" path="res://assets/ui/player_info/ui_backpack_chickenleg.png" id="2_t7kxu"]
[ext_resource type="Texture2D" uid="uid://d0tk8662fshwo" path="res://assets/ui/player_info/ui_backpack_heart.png" id="3_rm4eq"]
[ext_resource type="Texture2D" uid="uid://by56cxokfv00a" path="res://assets/ui/player_info/ui_backpack_heart2.png" id="4_rm4eq"]
[ext_resource type="Texture2D" uid="uid://cawx4ky2tlgky" path="res://assets/ui/player_info/ui_backpack_head.png" id="5_xmwl0"]
[ext_resource type="Texture2D" uid="uid://cmtpd8n1yekm3" path="res://assets/ui/player_info/ui_head_heart_01.png" id="6_oey15"]
[ext_resource type="Texture2D" uid="uid://bfyq72h7ymfoh" path="res://assets/ui/player_ui/ui_top_arrow.png" id="9_puu4q"]

[node name="AvatarHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oey15")

[node name="HungerHub" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="HungerHub"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 60.0
texture_under = ExtResource("1_y7i3r")
texture_progress = ExtResource("1_y7i3r")
tint_progress = Color(2.6933477, 2.6726854, 0.3171802, 1)

[node name="Label" type="Label" parent="HungerHub"]
layout_mode = 0
offset_left = 164.0
offset_top = 98.0
offset_right = 226.0
offset_bottom = 121.0
text = "100/100"

[node name="TextureRect" type="TextureRect" parent="HungerHub"]
layout_mode = 0
offset_left = 233.0
offset_top = 84.0
offset_right = 279.0
offset_bottom = 133.0
texture = ExtResource("2_t7kxu")

[node name="HeartHub" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="HeartHub"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 271.0
offset_bottom = 154.0
value = 60.0
texture_under = ExtResource("3_rm4eq")
texture_progress = ExtResource("3_rm4eq")
tint_progress = Color(2.5575337, 0.6996819, 0.92487603, 1)

[node name="Label" type="Label" parent="HeartHub"]
layout_mode = 0
offset_left = 166.0
offset_top = 50.0
offset_right = 228.0
offset_bottom = 73.0
text = "100/100"

[node name="TextureRect" type="TextureRect" parent="HeartHub"]
layout_mode = 0
offset_left = 236.0
offset_top = 39.0
offset_right = 283.0
offset_bottom = 88.0
texture = ExtResource("4_rm4eq")

[node name="Head" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Head"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 138.0
offset_bottom = 138.0
texture = ExtResource("5_xmwl0")

[node name="TextureRect2" type="TextureRect" parent="Head"]
layout_mode = 0
offset_left = 20.0
offset_top = 12.0
offset_right = 127.0
offset_bottom = 134.0
texture = ExtResource("6_oey15")
flip_h = true

[node name="UpgradeControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="upgradeBackGround" type="TextureRect" parent="UpgradeControl"]
z_index = -10
layout_mode = 0
offset_left = 49.0
offset_top = 121.0
offset_right = 89.0
offset_bottom = 194.0
texture = ExtResource("2_20omo")

[node name="upgradeFlag" type="TextureRect" parent="UpgradeControl"]
layout_mode = 0
offset_left = 49.0
offset_top = 143.0
offset_right = 89.0
offset_bottom = 183.0
texture = ExtResource("9_puu4q")
